# cell-phone-ux-demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  MiniGUI.cfg  MiniGUI.cfg.win32  README.md  cmake_config.h.in  cmake_install.cmake  config.h  configure.ac  incore_res.sh  install_manifest.txt  list.sh  main.cc  mgb_tswin.c  mgetc.c  mginit.c  mgncs.cfg  run_cellphone.sh
apps/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake  foo.c
apps/address-book/: ActivityContacts.cc  ActivityContacts.hh  ContactsLoadHelper.cc  ContactsLoadHelper.hh  ContactsTableViewPiece.cc  ContactsTableViewPiece.hh  DetailTableViewPiece.cc  DetailTableViewPiece.hh  Makefile  Makefile.am  cmake_install.cmake
apps/calc/: CalcActivity.cc  CalcActivity.hh  Makefile  Makefile.am  calc-calculate.c  cmake_install.cmake
apps/callhistory/: CallHistoryActivity.cc  CallHistoryActivity.hh  Makefile  Makefile.am  cmake_install.cmake  mcallhistorytableviewpiece.cc  mcallhistorytableviewpiece.hh
apps/camera/: ActivityCamera.cc  ActivityCamera.hh  Makefile  Makefile.am  cmake_install.cmake  effector-shoot.c  effector-shoot.h
apps/common/: Makefile  Makefile.am  cmake_install.cmake  mactivitytoolbarpiece.c  mactivitytoolbarpiece.h
apps/coverflow-gl/: CMakeLists.txt  CoverFlowActivity.cc  CoverFlowActivity.hh  Makefile.am  coverflow-gl.c
apps/dial/: CMakeLists.txt  DialPadActivity.cc  DialPadActivity.hh  Makefile  Makefile.am  cmake_install.cmake
apps/eraser/: Makefile.am  eraser-activity.cc  eraser-activity.hh  eraser.cc  eraser.hh
apps/flight-gl/: FlightActivity.cc  FlightActivity.hh  Makefile.am  flight-gl.c
apps/music/: ActivityAlbum.cc  ActivityAlbum.hh  ActivityMusicPlayer.cc  ActivityMusicPlayer.hh  AlbumTableViewPiece.cc  AlbumTableViewPiece.hh  CMakeLists.txt  Makefile  Makefile.am  MusicPlayerToolbar.cc  MusicPlayerToolbar.hh  SongTableViewPiece.cc  SongTableViewPiece.hh  cmake_install.cmake
apps/phone-call/: Makefile  Makefile.am  PhoneCallActivity.cc  PhoneCallActivity.hh  cmake_install.cmake  phonecall_func.cc
apps/photo/: ActivityPicturePlayer.cc  ActivityPicturePlayer.hh  ActivityPicturePreviewer.cc  ActivityPicturePreviewer.hh  CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake
apps/sample-activity/: Makefile  Makefile.am  cmake_install.cmake  ncs4pad-activity.cc  ncs4pad-activity.hh  pieceanimation-activity.cc  pieceanimation-activity.hh  sample-activity.cc  sample-activity.hh  sample-ncsactivity.cc  sample-ncsactivity.hh  trans-activity.cc  trans-activity.hh
apps/sample-navigation/: Makefile  Makefile.am  cmake_install.cmake  sample-navigation.cc  sample-navigation.hh
apps/screen-lock/: CMakeLists.txt  Makefile  Makefile.am  PanelManager.hh  ScreenLockActivity.cc  gradient.txt  (+9 more)
common/: Activity.cc  ActivityStack.cc  AppsInfoProvider.cc  CMakeLists.txt  CallLogProvider.cc  CallLogService.cc  ContactService.cc  ContactsProvider.cc  ContentProvider.cc  ContentResolver.cc  ContentValues.cc  DeviceSkin.c  GLActivity.cc  GraphicsView.cc  Makefile  Makefile.am  MediaStoreProvider.cc  MediaStoreService.cc  NCSActivity.cc  ResourceManager.cc  SQLiteCursor.cc  SQLiteDB.cc  SettingService.cc  SettingsProvider.cc  SimpleProviderFactory.cc  SmsProvider.cc  SmsService.cc  StateMachine.cc  TimeService.cc  TransitionAnimationFinished.cc  TransitionHover.cc  TransitionNoInput.cc  TransitionStandStill.cc  cmake_install.cmake  common.cc  utility.c
desktop/: ActivityDesktop.cc  ActivityDesktop.hh  CMakeLists.txt  DesktopCommonProc.cc  DesktopToolbar.cc  IPhoneDesktopController.cc  IPhoneDesktopController.hh  IPhoneDesktopItem.cc  IPhoneDesktopItem.hh  IPhoneDesktopLayout.cc  IPhoneDesktopLayout.hh  IPhoneDesktopState.cc  IPhoneDesktopState.hh  IPhoneDesktopStateApp.cc  IPhoneDesktopStateApp.hh  IPhoneDesktopStateDraging.cc  IPhoneDesktopStateDraging.hh  IPhoneDesktopStateInertia.cc  IPhoneDesktopStateInertia.hh  IPhoneDesktopStateNormal.cc  IPhoneDesktopStateNormal.hh  IPhoneDesktopStatePageTurning.cc  IPhoneDesktopStatePageTurning.hh  IPhoneDesktopStatePickup.cc  IPhoneDesktopStatePickup.hh  IPhoneDesktopStateShaking.cc  IPhoneDesktopStateShaking.hh  IPhoneDesktopStateShifting.cc  IPhoneDesktopStateShifting.hh  IPhoneDesktopStateTransposition.cc  IPhoneDesktopStateTransposition.hh  IPhoneDesktopTransitionInterface.cc  IPhoneDesktopTransitionInterface.hh  IPhoneDesktopView.cc  IPhoneDesktopView.hh  Makefile  Makefile.am  ScrollPageTrigger.cc  ScrollPageTrigger.hh  TransitionClickOnItem.cc  (+14 more)
etc/: Makefile.am  cellphone.xml  dial.skin  gvfb.skin  system.db
include/: Activity.hh  ActivityStack.hh  AppsInfoProvider.hh  CMakeLists.txt  CallLogProvider.hh  CallLogService.hh  ContactService.hh  ContactsProvider.hh  ContentCursor.hh  ContentProvider.hh  ContentResolver.hh  ContentValues.hh  DataSource.hh  DesktopCommonProc.hh  DesktopToolbar.hh  DeviceSkin.h  Event.hh  GLActivity.hh  GraphicsView.hh  Makefile.am  MediaStoreProvider.hh  MediaStoreService.hh  NCSActivity.hh  ResourceManager.hh  SQLiteCursor.hh  SQLiteDB.hh  SQLiteProvider.hh  SettingService.hh  SettingsProvider.hh  SignalEventWithParameters.hh  SimpleProviderFactory.hh  SmsProvider.hh  SmsService.hh  StateMachine.hh  TimeService.hh  TransitionAnimationFinished.hh  TransitionHover.hh  TransitionNoInput.hh  TransitionStandStill.hh  common.hh  (+3 more)
inner-res/: 1.png.c  2.png.c  3.png.c  4.png.c  5.png.c  6.png.c  7.png.c  8.png.c  9.png.c  CD.png.c  CMakeLists.txt  Makefile  Makefile.am  _pmp_inner_res.c  address_book_add.png.c  address_book_calllog.png.c  address_book_contacts.png.c  address_book_dial.png.c  address_book_photo.png.c  address_book_unknow.png.c  album_map.png.c  animation.png.c  background.png.c  backspace.png.c  backspace_hilight.png.c  big01.png.c  big02.png.c  big03.png.c  big04.png.c  big05.png.c  big06.png.c  big07.png.c  big08.png.c  big09.png.c  big10.png.c  big11.png.c  big12.png.c  bubble_btn1.png.c  bubble_btn2.png.c  calc.png.c  (+114 more)
test/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake
tools/: CMakeLists.txt  bootstrap.c  run_bootstrap.sh
(+319 files in other folders)
