SUBDIRS = \
    common \
    address-book \
    photo \
    sms \
    calc \
    dial \
    sample-activity \
    sys-setting \
    callhistory \
    eraser \
    music \
    sample-navigation \
    time-setting \
    camera \
    phone-call \
    screen-lock \
    flight-gl \
    coverflow-gl

noinst_LIBRARIES = libapps.a

libapps_a_SOURCES =
libapps_a_LIBADD = \
    common/libcommon.a \
    address-book/libaddress-book.a \
    photo/libphoto.a \
    sms/libsms.a \
    calc/libcalc.a \
    dial/libdial.a \
    sample-activity/libsample-activity.a \
    sys-setting/libsys-setting.a \
    callhistory/libcallhistory.a \
    eraser/liberaser.a \
    music/libmusic.a \
    sample-navigation/libsample-navigation.a \
    time-setting/libtime-setting.a \
    camera/libcamera.a \
    phone-call/libphone-call.a \
    screen-lock/libscreen-lock.a \
    flight-gl/libflight-gl.a \
    coverflow-gl/libcoverflow-gl.a
