SUBDIRS = \
    common \
    address-book \
    photo \
    sms \
    calc \
    dial \
    sample-activity \
    sys-setting \
    callhistory \
    eraser \
    music \
    sample-navigation \
    time-setting \
    camera \
    phone-call \
    screen-lock \
    flight-gl \
    coverflow-gl

noinst_LTLIBRARIES = libapps.la

libapps_la_SOURCES = foo.c
libapps_la_LIBADD = \
    common/libcommon.la \
    address-book/libaddress-book.la \
    photo/libphoto.la \
    sms/libsms.la \
    calc/libcalc.la \
    dial/libdial.la \
    sample-activity/libsample-activity.la \
    sys-setting/libsys-setting.la \
    callhistory/libcallhistory.la \
    eraser/liberaser.la \
    music/libmusic.la \
    sample-navigation/libsample-navigation.la \
    time-setting/libtime-setting.la \
    camera/libcamera.la \
    phone-call/libphone-call.la \
    screen-lock/libscreen-lock.la \
    flight-gl/libflight-gl.la \
    coverflow-gl/libcoverflow-gl.la
