AM_CPPFLAGS=-I../include -I../ncs4pad/include

noinst_LTLIBRARIES=libcommon.la

libcommon_la_SOURCES= \
    Activity.cc \
    ActivityStack.cc \
    AppsInfoProvider.cc \
    CallLogProvider.cc \
    CallLogService.cc \
    common.cc \
    ContactService.cc \
    ContactsProvider.cc \
    ContentProvider.cc \
    ContentResolver.cc \
    ContentValues.cc \
    GLActivity.cc \
    GraphicsView.cc \
    MediaStoreProvider.cc \
    MediaStoreService.cc \
    NCSActivity.cc \
    ResourceManager.cc \
    SettingService.cc \
    SettingsProvider.cc \
    SimpleProviderFactory.cc \
    SmsProvider.cc \
    SmsService.cc \
    SQLiteCursor.cc \
    SQLiteDB.cc \
    StateMachine.cc \
    TimeService.cc \
    TransitionAnimationFinished.cc \
    TransitionHover.cc \
    TransitionNoInput.cc \
    TransitionStandStill.cc \
    DeviceSkin.c \
    utility.c
