DIST_SUBDIRS = boost

noinst_HEADERS = \
    Activity.hh \
    ActivityStack.hh \
    AppsInfoProvider.hh \
    CallLogProvider.hh \
    CallLogService.hh \
    common.hh \
    ContactService.hh \
    ContactsProvider.hh \
    ContentCursor.hh \
    ContentProvider.hh \
    ContentResolver.hh \
    ContentValues.hh \
    DataSource.hh \
    DesktopCommonProc.hh \
    DesktopToolbar.hh \
    DeviceSkin.h \
    Event.hh \
    GLActivity.hh \
    global.h \
    GraphicsView.hh \
    MediaStoreProvider.hh \
    MediaStoreService.hh \
    NCSActivity.hh \
    register.h \
    ResourceManager.hh \
    SettingService.hh \
    SettingsProvider.hh \
    SignalEventWithParameters.hh \
    SimpleProviderFactory.hh \
    SmsProvider.hh \
    SmsService.hh \
    SQLiteCursor.hh \
    SQLiteDB.hh \
    SQLiteProvider.hh \
    StateMachine.hh \
    TimeService.hh \
    TransitionAnimationFinished.hh \
    TransitionHover.hh \
    TransitionNoInput.hh \
    TransitionStandStill.hh \
    utility.h

