noinst_LTLIBRARIES=libinner-res.la

libinner_res_la_SOURCES= inner_res_init.c inner_res_init.h mgetc.h \
    1.png.c \
    2.png.c \
    3.png.c \
    4.png.c \
    5.png.c \
    6.png.c \
    7.png.c \
    8.png.c \
    9.png.c \
    address_book_add.png.c \
    address_book_calllog.png.c \
    address_book_contacts.png.c \
    address_book_dial.png.c \
    address_book_photo.png.c \
    address_book_unknow.png.c \
    album_map.png.c \
    animation.gif.c \
    animation.png.c \
    background.png.c \
    backspace_hilight.png.c \
    backspace.png.c \
    big01.png.c \
    big02.png.c \
    big03.png.c \
    big04.png.c \
    big05.png.c \
    big06.png.c \
    big07.png.c \
    big08.png.c \
    big09.png.c \
    big10.png.c \
    big11.png.c \
    big12.png.c \
    bubble_btn1.png.c \
    bubble_btn2.png.c \
    calc_left.png.c \
    calc.png.c \
    calc_right.png.c \
    callrecord.png.c \
    camera_left.png.c \
    camera.png.c \
    camera_right.png.c \
    CD.png.c \
    contact.png.c \
    contacts_left.png.c \
    contacts.png.c \
    contacts_right.png.c \
    date_left.png.c \
    date.png.c \
    date_right.png.c \
    default.png.c \
    dialbks.png.c \
    dialcall.png.c \
    dial_left.png.c \
    dialpad.png.c \
    dialplus.png.c \
    dial.png.c \
    dial_right.png.c \
    esc_hilight.png.c \
    esc.png.c \
    file.png.c \
    flight_left.png.c \
    flight.png.c \
    flight_right.png.c \
    games_left.png.c \
    games.png.c \
    games_right.png.c \
    handsfree_32.png.c \
    handsfree.png.c \
    hash_just_right.png.c \
    hash_too_big.png.c \
    hash_too_small.png.c \
    hms_logo.png.c \
    image.png.c \
    indicator_green_click.png.c \
    indicator_green_normal.png.c \
    inner_res_init.c \
    internet_left.png.c \
    internet.png.c \
    internet_right.png.c \
    kb.jpg.c \
    kb.png.c \
    keyboard_32.png.c \
    keyboard.png.c \
    logo1_med.png.c \
    main_scr.png.c \
    music_left.png.c \
    music.png.c \
    music_right.png.c \
    mute_32.png.c \
    mute.png.c \
    news.png.c \
    next.png.c \
    pause.png.c \
    phone.png.c \
    photo01big.png.c \
    photo01.png.c \
    photo02big.png.c \
    photo02.png.c \
    photo03big.png.c \
    photo03.png.c \
    photo04big.png.c \
    photo04.png.c \
    photo05big.png.c \
    photo05.png.c \
    photo06big.png.c \
    photo06.png.c \
    photo07big.png.c \
    photo07.png.c \
    photo08big.png.c \
    photo08.png.c \
    photo09big.png.c \
    photo09.png.c \
    photo10big.png.c \
    photo10.png.c \
    photo11big.png.c \
    photo11.png.c \
    photo12big.png.c \
    photo12.png.c \
    photo13big.png.c \
    photo13.png.c \
    photo14big.png.c \
    photo14.png.c \
    photo15big.png.c \
    photo15.png.c \
    pic_next.png.c \
    pic_pause_play.png.c \
    pic_prev.png.c \
    picture_left.png.c \
    picture.png.c \
    picture_right.png.c \
    play_normal.png.c \
    play.png.c \
    play_pressed.png.c \
    prev.png.c \
    red_area.png.c \
    settings_left.png.c \
    settings.png.c \
    settings_right.png.c \
    shoot_normal.png.c \
    shoot_pressed.png.c \
    sms_icon.png.c \
    sms_left.png.c \
    sms.png.c \
    sms_right.png.c \
    titlebutton.png.c \
    title.png.c \
    toptitle.png.c
