AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libaddress-book.la

libaddress_book_la_SOURCES = \
    ActivityContacts.cc \
    ActivityContacts.hh \
    ContactsLoadHelper.cc \
    ContactsLoadHelper.hh \
    ContactsTableViewPiece.cc \
    ContactsTableViewPiece.hh \
    DetailTableViewPiece.cc \
    DetailTableViewPiece.hh

