AM_CPPFLAGS = -I../../include -I../../ncs4pad/include

noinst_LTLIBRARIES = libaddress-book.la

libaddress_book_la_SOURCES = \
    ActivityContacts.cc \
    ActivityContacts.hh \
    ContactsLoadHelper.cc \
    ContactsLoadHelper.hh \
    ContactsTableViewPiece.cc \
    ContactsTableViewPiece.hh \
    DetailTableViewPiece.cc \
    DetailTableViewPiece.hh

