AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libcallhistory.la

libcallhistory_la_SOURCES = \
    CallHistoryActivity.cc \
    CallHistoryActivity.hh \
    mcallhistorytableviewpiece.cc \
    mcallhistorytableviewpiece.hh
