AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libcamera.la

libcamera_la_SOURCES = \
    effector-shoot.c \
    effector-shoot.h \
    ActivityCamera.cc \
    ActivityCamera.hh
