noinst_LIBRARIES = libmusic.a

libmusic_a_SOURCES = \
    ActivityAlbum.cc \
    ActivityAlbum.hh \
    ActivityMusicPlayer.cc \
    ActivityMusicPlayer.hh \
    AlbumTableViewPiece.cc \
    AlbumTableViewPiece.hh \
    MusicPlayerToolbar.cc \
    MusicPlayerToolbar.hh \
    SongTableViewPiece.cc \
    SongTableViewPiece.hh
