AM_CPPFLAGS = -I../../include -I../../ncs4pad/include

noinst_LTLIBRARIES = libmusic.la

libmusic_la_SOURCES = \
    ActivityAlbum.cc \
    ActivityAlbum.hh \
    ActivityMusicPlayer.cc \
    ActivityMusicPlayer.hh \
    AlbumTableViewPiece.cc \
    AlbumTableViewPiece.hh \
    MusicPlayerToolbar.cc \
    MusicPlayerToolbar.hh \
    SongTableViewPiece.cc \
    SongTableViewPiece.hh
