AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libphone-call.la

libphone_call_la_SOURCES = \
    PhoneCallActivity.cc \
    PhoneCallActivity.hh \
    phonecall_func.cc 
