AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libphoto.la

libphoto_la_SOURCES = \
    ActivityPicturePlayer.cc \
    ActivityPicturePlayer.hh \
    ActivityPicturePreviewer.cc \
    ActivityPicturePreviewer.hh
