noinst_LIBRARIES = libsample-activity.a

libsample_activity_a_SOURCES = \
    ncs4pad-activity.cc \
    ncs4pad-activity.hh \
    pieceanimation-activity.cc \
    pieceanimation-activity.hh \
    sample-activity.cc \
    sample-activity.hh \
    sample-ncsactivity.cc \
    sample-ncsactivity.hh \
    trans-activity.cc \
    trans-activity.hh
