AM_CPPFLAGS = -I../../include -I../../ncs4pad/include

noinst_LTLIBRARIES = libsample-activity.la

libsample_activity_la_SOURCES = \
    ncs4pad-activity.cc \
    ncs4pad-activity.hh \
    pieceanimation-activity.cc \
    pieceanimation-activity.hh \
    sample-activity.cc \
    sample-activity.hh \
    sample-ncsactivity.cc \
    sample-ncsactivity.hh \
    trans-activity.cc \
    trans-activity.hh
