DIST_SUBDIRS = test

noinst_LIBRARIES = libscreen-lock.a

libscreen_lock_a_SOURCES = \
    dmStateMachine.cc \
    dmStateMachine.hh \
    mhighlightpiece.c \
    mhighlightpiece.h \
    mshutterpiece.c \
    mshutterpiece.h \
    PanelManager.hh \
    ScreenLockActivity.cc \
    ScreenLockActivity.hh
