AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

DIST_SUBDIRS = test

noinst_LTLIBRARIES = libscreen-lock.la

libscreen_lock_la_SOURCES = \
    dmStateMachine.cc \
    dmStateMachine.hh \
    mhighlightpiece.c \
    mhighlightpiece.h \
    mshutterpiece.c \
    mshutterpiece.h \
    PanelManager.hh \
    ScreenLockActivity.cc \
    ScreenLockActivity.hh
