AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libsms.la

libsms_la_SOURCES = \
    msmsdetailview.cc \
    msmsdetailview.h \
    SMSActivity.cc \
    SMSActivity.hh \
    SMSListViewPiece.cc \
    SMSListViewPiece.hh
