AM_CPPFLAGS = -I../../include -I../../ncs4pad/include -I../../ncs4pad/include/misc -I../../ncs4pad/include/physics-animation -I../../ncs4pad/include/pieces

noinst_LTLIBRARIES = libsys-setting.la

libsys_setting_la_SOURCES = \
    SettingActivity.cc \
    SettingActivity.hh \
    SettingClockPiece.cc \
    SettingMainWinPiece.cc \
    SettingMainWinPiece.hh \
    SettingSubWinPiece.cc \
    SettingSubWinPiece.hh
