AM_CPPFLAGS = -I../../include -I../../ncs4pad/include

noinst_LTLIBRARIES = libsys-setting.la

libsys_setting_la_SOURCES = \
    SettingActivity.cc \
    SettingActivity.hh \
    SettingClockPiece.cc \
    SettingMainWinPiece.cc \
    SettingMainWinPiece.hh \
    SettingSubWinPiece.cc \
    SettingSubWinPiece.hh
